# qscg

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDENTITY.md  LICENSE  README.md  SECURITY.md  SOUL.md  TOOLS.md  USER.md  debug_verify_steps.py  debug_w1.py  pyproject.toml  qscg_v2_1_final.py  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  code-quality.yml  publish-wiki.yml  security.yml
.openclaw/: workspace-state.json
.tmp/: merge.json
benchmarks/: generate_report.py  test_benchmark.py
docs/: CNSA-2.0-Compliance.md  QSCG_v4_Deliverables_Summary.txt  QSCG_v4_GitHub_Push_Guide.txt  Security-Audit.md  benchmark-report.md  competitor_analysis_report.md  github_ecosystem_analysis.md  index.html  related_projects.md  test-report.html
docs/academic/: QSCG_v4_Implementation_Plan.txt
docs/analysis/: DEEP_ANALYSIS_PLAN.md  MASTER_COMPETITIVE_MATRIX.md  PQClean_deep_dive.md  additional_repos_scan.md  falcon_py_deep_dive.md  hqc_mceliece_evaluation.md  kyber_py_deep_dive.md  liboqs_deep_dive.md
docs/wiki/: API-Documentation.md  Algorithms-and-Standards.md  CLI-Usage.md  Home.md  Quantum-Threat-Analysis.md
quantum_safe_crypto/: __init__.py  fndsa.py  gf2poly.py  hqc.py  hqc_v2.py  ntru_ntt.py  qcmdpc.py  quantum_threat.py  reed_muller.py
quantum_safe_crypto/docs/diagrams/: mermaid_diagrams.py
quantum_safe_crypto/docs/references/: github_repos.md  papers.md  standards.md
quantum_safe_crypto/protocols/: quic_pqc.py  signal_pqc.py  wireguard_pqc.py
skills/kimi-desktop-gateway-policy/: .bundle-version
skills/kimi-webbridge-desktop/: .bundle-version  SKILL.md
skills/kimiim/: SKILL.md.fingerprint
skills/time-awareness/: SKILL.md.fingerprint
skills/worker-safety/: SKILL.md.fingerprint
src/: __init__.py  lattice_crypto.py  quantum_safe_gui.py  utils.py
src/core/: drbg.py  falcon_wrapper.py  liboqs_backend.py  ml_kem_compress.py  ml_kem_implicit_rejection.py  ntt_kyber.py  qscg_v4_core.py
src/gui/: qscg_gui_v4.py
src/qscg/: __init__.py
src/qscg/common/: __init__.py  constants.py  hashing.py  utilities.py
src/qscg/hybrid/: __init__.py
tests/: __init__.py  kat_framework.py  test_fndsa.py  test_hqc.py  test_hqc_v2.py  test_mldsa.py  test_ntru_ntt.py  test_ntt.py  test_protocols.py  test_qscg.py  test_quantum_threat.py  test_reed_muller.py
(+26 files in other folders)
