[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qscg"
version = "4.0.1"
description = "Quantum-Safe Cryptography Toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mehmet Cem Koca", email = "mcemkoca@proton.me"}
]
keywords = ["pqc", "ml-kem", "ml-dsa", "slh-dsa", "hqc", "fn-dsa", "falcon"]

[project.urls]
Homepage = "https://github.com/mcemkoca/qscg"
Repository = "https://github.com/mcemkoca/qscg"
