[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qscg"
version = "3.1.0"
description = "NIST FIPS 203/204/205 compliant post-quantum cryptography with quantum computing integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "deuterium12 (M.Cem Koca)", email = "mcemkoca0@gmail.com"}
]
keywords = ["cryptography", "post-quantum", "quantum-safe", "nist", "fips-203", "fips-204", "fips-205", "ml-kem", "ml-dsa", "slh-dsa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.5",
]
quantum = [
    "qiskit>=1.0",
    "qiskit-ibm-runtime>=0.20",
]

[project.urls]
Homepage = "https://github.com/mcemkoca/qscg"
Documentation = "https://github.com/mcemkoca/qscg/wiki"
Repository = "https://github.com/mcemkoca/qscg.git"
Issues = "https://github.com/mcemkoca/qscg/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qscg = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
